[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qledger"
version = "0.1.0"
description = "The universal quantum experiment lifecycle platform. Execute circuits across frameworks, track noise, benchmark hardware, and persist everything."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Namash Aggarwal" },
]
keywords = [
    "quantum", "quantum-computing", "qiskit", "cirq", "pennylane",
    "benchmarking", "noise", "reproducibility", "sqlite", "experiment-tracking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

# Core has ZERO heavy dependencies — only stdlib + sqlite3
dependencies = []

[project.optional-dependencies]
qiskit = ["qiskit>=1.0", "qiskit-aer>=0.13"]
cirq = ["cirq-core>=1.3"]
pennylane = ["pennylane>=0.35"]
all = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "cirq-core>=1.3",
    "pennylane>=0.35",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
]

[project.scripts]
qledger = "qledger.cli.main:main"

[project.urls]
Homepage = "https://github.com/namashworks/qledger"
Repository = "https://github.com/namashworks/qledger"
Issues = "https://github.com/namashworks/qledger/issues"
Documentation = "https://github.com/namashworks/qledger/tree/main/docs"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true

# Qiskit, Cirq, and PennyLane do not ship type stubs (no py.typed marker),
# so mypy cannot analyse them. Silence the missing-import noise without
# weakening type checking of our own code.
[[tool.mypy.overrides]]
module = ["qiskit.*", "qiskit_aer.*", "cirq.*", "pennylane.*"]
ignore_missing_imports = true
